--- a/html/index.html
+++ b/html/index.html
@@ -21,9 +21,8 @@
     <!-- Nav -->
     <div class="nav-bg">
         <nav class="navegacion-principal contenedor">
-            <a href="#">Menu Principal</a>
-            <a href="#">Contenido</a>
-            <a href="#">Contactar</a>
+            <a href="/html/index.html">Menu Principal</a>
+            <a href="/html/contacto.html">Contactar</a>
         </nav>
     </div>
 
@@ -56,7 +55,7 @@
             </div>
 
 
-            <a class="boton" href="#">
+            <a class="boton" href="/html/contacto.html">
                  Contactar
             </a>
         </div>
@@ -70,18 +69,41 @@
 
             <section class="servicio">
                 <h3>Clima</h3>
+                <a href="/html/contenido.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-cloud-storm" width="76" height="76" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8d99ae" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M7 18a4.6 4.4 0 0 1 0 -9a5 4.5 0 0 1 11 2h1a3.5 3.5 0 0 1 0 7h-1" />
+                    <polyline points="13 14 11 18 14 18 12 22" />
+                  </svg>
+                </a>
                 <p>¿Que te espera el dia de hoy?.
                 </p>
             </section>
 
             <section class="servicio">
                 <h3>Hora</h3>
+                <a href="/html/contenido.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-alarm" width="76" height="76" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8d99ae" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <circle cx="12" cy="13" r="7" />
+                    <polyline points="12 10 12 13 14 13" />
+                    <line x1="7" y1="4" x2="4.25" y2="6" />
+                    <line x1="17" y1="4" x2="19.75" y2="6" />
+                  </svg>
+                </a>
                 <p>La hora del mundo.
                 </p>
             </section>
 
             <section class="servicio">
                 <h3>Ubicación</h3>
+                <a href="/html/contenido.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-gps" width="76" height="76" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8d99ae" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <circle cx="12" cy="12" r="9" />
+                    <path d="M12 17l-1 -4l-4 -1l9 -4z" />
+                  </svg>
+                </a>
                 <p>Descubre en qué lugar del mapa.
                 </p>
             </section>
