Html y Scss de clima, contacto y hora

--- a/html/clima.html
+++ b/html/clima.html
@@ -27,7 +27,7 @@
             </div>
             <div>
                 <h1 class="titulo-fnt">
-                    Antes de salir de casa <span>deberias saber...</span>
+                    Antes de salir de casa <span>deberias saber...</span> algo sobre el clima
                 </h1>
             </div>
         </div>
@@ -72,51 +72,52 @@
     <!-- Main -->
     <main class="contenedor sombra">
         <h2> ¿Que dato te interesa saber?</h2>
-
-        <div class="servicios">
-
-            <section class="servicio">
-                <h3>Clima</h3>
-                <a href="/html/clima.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-cloud-storm" width="76" height="76" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8d99ae" fill="none" stroke-linecap="round" stroke-linejoin="round">
+    <div class="servicios-caja">
+            <div class="servicios-caja">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-cloud-storm" width="76" height="76" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8d99ae" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M7 18a4.6 4.4 0 0 1 0 -9a5 4.5 0 0 1 11 2h1a3.5 3.5 0 0 1 0 7h-1" />
                     <polyline points="13 14 11 18 14 18 12 22" />
-                  </svg>
-                </a>
-                <p>¿Que te espera el dia de hoy?.
-                </p>
-            </section>
+                </svg>
+            </div>
 
-            <section class="servicio">
-                <h3>Hora</h3>
-                <a href="/html/hora.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-alarm" width="76" height="76" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8d99ae" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                    <circle cx="12" cy="13" r="7" />
-                    <polyline points="12 10 12 13 14 13" />
-                    <line x1="7" y1="4" x2="4.25" y2="6" />
-                    <line x1="17" y1="4" x2="19.75" y2="6" />
-                  </svg>
-                </a>
-                <p>La hora del mundo.
-                </p>
-            </section>
+            <div>
+                <form id="formulario" class="mt-10 " action="#" method="POST">
+                    <div class="mt-5">
+                        <input 
+                            type="text" 
+                            name="ciudad"
+                            id="ciudad"
+                            placeholder="Escribe tu Ciudad"
+                            class="w-full p-2 rounded"
+                        />
+                    </div>
+                    <div class="mt-5">
+                        <select 
+                            class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500" 
+                            id="pais"
+                        >
+                            <option disabled selected value="">-- Seleccione --</option>
+                            <option value="AR">Argentina</option>
+                            <option value="CO">Colombia</option>
+                            <option value="CR">Costa Rica</option>
+                            <option value="ES">España</option>
+                            <option value="US">Estados Unidos</option>
+                            <option value="MX">México</option>
+                            <option value="PE">Perú</option>
+                        </select>
+                    </div>
 
-            <section class="servicio">
-                <h3>Capitales</h3>
-                <a href="/html/capitales.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-gps" width="76" height="76" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8d99ae" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                    <circle cx="12" cy="12" r="9" />
-                    <path d="M12 17l-1 -4l-4 -1l9 -4z" />
-                  </svg>
-                </a>
-                <p>Descubre en qué lugar del mapa.
-                </p>
-            </section>
+                    <input 
+                        type="submit"
+                        class="mt-5 w-full bg-yellow-500 p-3  uppercase font-bold cursor-pointer rounded"
+                        value="Obtener Clima"
+                    />
+
+                </form>
+            </div>
+            <div id="resultado"></div>
         </div>
-
     </main>
     <!-- Footer -->
 
