--- a/html/contacto.html
+++ b/html/contacto.html
@@ -13,18 +13,25 @@
 
     <!-- Header -->
     <header>
-        <h1 class="titulo-fnt">
-            ¿Preguntas?
-        </h1>
+        <div class="encabezado">
+            <div>
+                <a href="/html/index.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-zoom-question" width="76" height="76" viewBox="0 0 24 24" stroke-width="2" stroke="#d90429" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <circle cx="10" cy="10" r="7" />
+                        <path d="M21 21l-6 -6" />
+                        <line x1="10" y1="13" x2="10" y2="13.01" />
+                        <path d="M10 10a1.5 1.5 0 1 0 -1.14 -2.474" />
+                    </svg>
+                </a>
+            </div>
+            <div>
+                <h1 class="titulo-fnt">
+                    Antes de salir de casa <span>deberias saber...</span> cómo contactarnos
+                </h1>
+            </div>
+        </div>
     </header>
-
-    <!-- Nav -->
-    <div class="nav-bg">
-        <nav class="navegacion-principal contenedor">
-            <a href="/html/index.html">Menu Principal</a>
-        </nav>
-    </div>
-
 
     <!-- Main -->
     <main class="contenedor sombra">
