--- a/html/hora.html
+++ b/html/hora.html
@@ -13,18 +13,26 @@
 
     <!-- Header -->
     <header>
-        <h1 class="titulo-fnt">
-            Antes de salir de casa <span>deberias saber...</span>
-        </h1>
+        <div class="encabezado">
+            <div>
+                <a href="/html/index.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-zoom-question" width="76" height="76" viewBox="0 0 24 24" stroke-width="2" stroke="#d90429" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <circle cx="10" cy="10" r="7" />
+                        <path d="M21 21l-6 -6" />
+                        <line x1="10" y1="13" x2="10" y2="13.01" />
+                        <path d="M10 10a1.5 1.5 0 1 0 -1.14 -2.474" />
+                    </svg>
+                </a>
+            </div>
+            <div>
+                <h1 class="titulo-fnt">
+                    Antes de salir de casa <span>deberias saber...</span>
+                </h1>
+            </div>
+        </div>
     </header>
 
-    <!-- Nav -->
-    <div class="nav-bg">
-        <nav class="navegacion-principal contenedor">
-            <a href="/html/index.html">Menu Principal</a>
-            <a href="/html/contacto.html">Contactar</a>
-        </nav>
-    </div>
 
     <!-- section-->
     <section class="hero">
@@ -55,7 +63,7 @@
             </div>
 
 
-            <a class="boton" href="#">
+            <a class="boton" href="/html/contacto.html">
                  Contactar
             </a>
         </div>
@@ -68,22 +76,20 @@
         <div class="servicios">
 
             <section class="servicio">
-                <h3>Clima</h3>
-                <p>¿Que te espera el dia de hoy?.
-                </p>
-            </section>
-
-            <section class="servicio">
                 <h3>Hora</h3>
+                <a href="/html/contenido.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-alarm" width="76" height="76" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8d99ae" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <circle cx="12" cy="13" r="7" />
+                    <polyline points="12 10 12 13 14 13" />
+                    <line x1="7" y1="4" x2="4.25" y2="6" />
+                    <line x1="17" y1="4" x2="19.75" y2="6" />
+                  </svg>
+                </a>
                 <p>La hora del mundo.
                 </p>
             </section>
 
-            <section class="servicio">
-                <h3>Ubicación</h3>
-                <p>Descubre en qué lugar del mapa.
-                </p>
-            </section>
         </div>
 
     </main>
